@@ -1,4 +1,4 @@
-*vifm-app.txt*    For Vifm version 0.7.8  Last change: 2015 Apr 21
+*vifm-app.txt*    For Vifm version 0.7.8  Last change: 2015 Apr 26
 
  Email for bugs and suggestions: <xaizek@openmailbox.org>
 
@@ -1494,6 +1494,7 @@ Available group-name values:
  - CmdLine - the command line/status bar color
  - ErrorMsg - color of error messages in the status bar
  - StatusLine - color of the line above the status bar
+ - JobLine - color of job line that appears above the status line
  - WildMenu - color of the wild menu items
  - CurrLine - line at cursor position in active view
  - OtherLine - line at cursor position in inactive view
@@ -1634,6 +1635,7 @@ command.
 
 Here is the hierarchy of highlight groups, which you need to know for using
 transparency:
+  JobLine
   StatusLine
     WildMenu
   Border
@@ -3745,8 +3747,8 @@ Both types are set using |vifm-:colorscheme| command, but of different forms:
 
 Look of different parts of the TUI (Text User Interface) is determined in
 this way:
-   - Border, TopLineSel, TopLine, CmdLine, ErrorMsg, StatusLine and WildMenu
-     are always determined by the primary color scheme
+   - Border, TopLineSel, TopLine, CmdLine, ErrorMsg, StatusLine, JobLine and
+     WildMenu are always determined by the primary color scheme
    - CurrLine, Selected, Directory, Link, BrokenLink, Socket, Device,
      Executable, Fifo and Win are determined by primary color scheme and a set
      of local color schemes, which can be empty
